--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,29 @@ body {
     background-color: #22577A;
     font-family: 'oxygen', sans-serif;
     text-align: center;
+    color: #F8F7F2;
+}
+
+.red {
+    background-color: #FB3240;
+    border: 3px solid #000000;
 }
 
 /* ---------- Heading */
 
 .heading {
     font-family: 'dosis', sans-serif;
-    font-size: 5rem;
+    font-size: 3rem;
+}
+
+/* ---------- Game Area */
+
+.game-area {
+    background-color: #F8F7F2;
+    border: 3px solid #000000;
+}
+
+#dice {
+    width: 75px;
+    height: 75px;
 }
