--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,16 @@ body {
 
 /* ---------- Heading */
 
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'dosis', sans-serif;
     font-size: 3rem;
     width: 200px;
@@ -23,7 +32,17 @@ body {
 
 /* ---------- Game Area */
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .game-area {
+    
+    width: 75%;
+    height: 75%;
     background-color: #F8F7F2;
     border: 3px solid #000000;
 }
