--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,14 @@ body {
     border: 3px solid #000000;
 }
 
+.rules-box > p {
+    padding: 10px;
+}
+
+.score-area > p {
+    padding: 5px;
+}
+
 /* ---------- Heading */
 
 .title {
@@ -28,6 +36,7 @@ body {
     font-family: 'dosis', sans-serif;
     font-size: 3rem;
     width: 200px;
+    padding: 10px;
 }
 
 /* ---------- Game Area */
@@ -44,8 +53,8 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 75%;
-    height: 75%;
+    width: 90%;
+    height: 90%;
     background-color: #F8F7F2;
     border: 3px solid #000000;
 }
