--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
     border: 3px solid #000000;
 }
 
+#message {
+    height: 25px;
+    color: #FB3240;
+}
+
 /* ---------- Heading */
 
 .title {
