--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@ body {
     color: #F8F7F2;
 }
 
-.red {
-    background-color: #FB3240;
+.blue {
+    background-color: #22577A;
     border: 3px solid #000000;
 }
 
@@ -27,6 +27,9 @@ body {
     justify-content: center;
     font-family: 'dosis', sans-serif;
     font-size: 3rem;
+    background-color: #FB3240;
+    color: #F8F7F2;
+    border: 3px solid #000000;
     width: 200px;
     padding: 10px;
 }
